# clip-faiss-server

./: .env  docker-compose.yaml  dockerfile  mqtt_config.yaml  pyproject.toml
src/: embeddings.py  faiss_vectorstore.py  globals.py  main.py  routes.py  schemas.py  server.py
src/services/: faiss_vectorstore.py  fastvlm_caption.py  image_ingestion.py  mqtt_subscriber.py  supabase_client.py
