[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "clip-faiss-server"
version = "0.1.0"
description = "FastAPI server for CLIP embeddings and FAISS search"
requires-python = ">=3.12,<3.13"
dependencies = [
    "torch==2.10.0",
    "torchvision==0.25.0",
    "torchaudio==2.10.0",

    "langchain==1.2.15",
    "langchain-core==1.3.2",
    "langchain-community==0.4.1",

    "transformers==5.0.0",
    "Pillow==11.3.0",
    "numpy==2.0.2",

    "fastapi==0.136.1",
    "uvicorn==0.46.0",
    "faiss-cpu==1.13.2",

    "python-multipart==0.0.26",
    "python-dotenv==1.2.2"
]